# Falai

./: README.md  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  dev.py  pyproject.toml
src/api/: applicaton.py  configuration.py
src/api/dtos/: users.py
src/api/routes/: users.py
src/datalayer/: dbconfig.py
src/datalayer/models/: user.py
