[tool.poetry]
name = "falai"
version = "0.1.0"
description = ""
authors = ["Gustavo Dias <dias.gustavof@gmail.com>"]
readme = "README.md"
packages = [{include = "mypackage", from="src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}
tortoise = "^0.1.1"
tortoise-orm = {extras = ["asyncpg"], version = "^0.22.1"}


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"

[tool.taskipy.tasks]
dev = "fastapi dev dev.py"
prod = "uvicorn src.api.application:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
